; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_fd.c_fdtable_get.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_fd.c_fdtable_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.fd = type { i32 }
%struct.fdtable = type { %struct.fd** }

@current = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.fd* @fdtable_get(%struct.fdtable* %0, i64 %1) #0 {
  %3 = alloca %struct.fd*, align 8
  %4 = alloca %struct.fdtable*, align 8
  %5 = alloca i64, align 8
  store %struct.fdtable* %0, %struct.fdtable** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp ult i64 %6, 0
  br i1 %7, label %17, label %8

8:                                                ; preds = %2
  %9 = load i64, i64* %5, align 8
  %10 = trunc i64 %9 to i32
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp uge i32 %10, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %8, %2
  store %struct.fd* null, %struct.fd** %3, align 8
  br label %25

18:                                               ; preds = %8
  %19 = load %struct.fdtable*, %struct.fdtable** %4, align 8
  %20 = getelementptr inbounds %struct.fdtable, %struct.fdtable* %19, i32 0, i32 0
  %21 = load %struct.fd**, %struct.fd*** %20, align 8
  %22 = load i64, i64* %5, align 8
  %23 = getelementptr inbounds %struct.fd*, %struct.fd** %21, i64 %22
  %24 = load %struct.fd*, %struct.fd** %23, align 8
  store %struct.fd* %24, %struct.fd** %3, align 8
  br label %25

25:                                               ; preds = %18, %17
  %26 = load %struct.fd*, %struct.fd** %3, align 8
  ret %struct.fd* %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
